--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,44 @@
-
+.teksts {
+padding: 10px 10px 8px;
+text-align: center;
+background-color: white;
+font-family: 'Courier New', Courier, monospace;
+font-size: 32px;
+}
+.arejaKaste {
+  border-style: ridge;
+  border-color: black;
+  border-spacing: 50px;
+  background-color: lightgrey;
+  padding: 10px 10px 10px 10px;
+  margin-left: auto;
+  margin-right: auto;
+  width: 30%;
+}
+.iesniegt {
+  border-style: solid;
+  border-radius: 10px;
+  width: 30%;
+  margin-left: 5%;
+}
+.button {
+  background-color: white;
+  border: none;
+  color: black;
+  padding: 15px 32px;
+  text-align: center;
+  display: inline-block;
+  font-size: 16px;
+  margin-left: 50%;
+  cursor: pointer;
+}
+.center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+}
+.bold {
+  font-weight: 900;
+  margin-left: 5%;
+}
