--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,9 @@
 .teksts {
-padding: 10px 10px 8px;
+padding: 6px 6px 6px;
 text-align: center;
-background-color: white;
+background-color: red;
 font-family: 'Courier New', Courier, monospace;
-font-size: 32px;
+font-size: 30px;
 }
 .arejaKaste {
   border-style: ridge;
